# danube

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  diff.txt  schema.json
danube-admin/: Cargo.toml  README.md  mcp-config.yml
danube-admin-cli/: Cargo.toml  README.md  SCHEMA_REGISTRY_IMPLEMENTATION_PLAN.md
danube-admin-cli/docs/: README.md  brokers.md  namespaces.md  schema_registry.md  topics.md
danube-admin-cli/src/: brokers.rs  client.rs  main.rs  namespaces.rs  schema_registry.rs  shared.rs  topics.rs
danube-admin-cli/tests/: namespace_lifecycle.rs  schema_registry_lifecycle.rs  topic_lifecycle_non_partitioned.rs  topic_lifecycle_partitioned.rs
danube-admin-gateway/: Cargo.toml  IMPLEMENTATION_PLAN_PROMQL.md  README.md
danube-admin-gateway/src/: app.rs  dto.rs  grpc_client.rs  http.rs  main.rs  metrics.rs
danube-admin/src/: main.rs
danube-admin/tests/: mcp_protocol_smoke_test.rs  namespace_lifecycle.rs  schema_admin_operations.rs  schema_registry_lifecycle.rs  topic_lifecycle_partitioned.rs
danube-broker/: API_SIMPLIFICATION.md  CONSUMER_LIFECYCLE_REFACTOR.md  Cargo.toml  DEADLOCK_FIX.md  PERFORMANCE_OPTIMIZATION.md  REFACTOR_SUMMARY.md  RELIABILITY_ANALYSIS.md  RELIABILITY_IMPLEMENTATION_GUIDE.md
danube-broker/src/: admin.rs  args_parse.rs  async_performance_test.rs  auth.rs  auth_jwt.rs  broker_metrics.rs  broker_server.rs  broker_service.rs  consumer.rs  danube_service.rs  dispatch_config.rs  dispatch_strategy.rs  dispatcher.rs  edge_server.rs  edge_storage_adapter.rs  error_message.rs  main.rs  message.rs  metadata_storage.rs  policies.rs  producer.rs  rate_limiter.rs  replicator.rs  resources.rs  schema.rs  service_configuration.rs  storage_configuration.rs  subscription.rs  topic.rs  topic_cluster.rs  topic_control.rs  topic_registry.rs  topic_schema.rs  topic_tests.rs  topic_worker.rs  utils.rs
danube-broker/tests/: consumer_churn.rs  key_shared_basic.rs  key_shared_filtering.rs  key_shared_partitioned.rs  key_shared_safety.rs  non_partitioned_exclusive.rs  non_partitioned_shared.rs  non_partitioned_topic_test.rs  partitioned_basic.rs  partitioned_exclusive.rs  partitioned_shared.rs  partitioned_topic_test.rs  partitioned_variants.rs  partitioning_validation.rs  producer_reconnect.rs  pubsub_fanout_exclusive.rs  queuing_shared_round_robin.rs  reliable_dispatch_basic.rs  reliable_dispatch_exclusive.rs  reliable_dispatch_failure_handling.rs  reliable_dispatch_heartbeat.rs  reliable_dispatch_reconnection.rs  reliable_dispatch_shared.rs  reliable_dispatch_topic_test.rs  reliable_shared_redelivery.rs  reliable_topic_move.rs  reliable_topic_move_shared_fs.rs  schema_compatibility.rs  schema_registry_basic.rs  schema_validation_policy.rs  schema_version_selection.rs  security_e2e.rs  subscription_basic.rs  subscription_exclusive.rs  subscription_shared.rs  test_utils.rs  topic_schema_config.rs
danube-cli/: Cargo.toml  README.md
danube-cli/docs/: README.md  consumer-advanced.md  consumer-basics.md  examples.md  getting-started.md  producer-advanced.md  producer-basics.md  quick-reference.md  schema-registry.md
danube-cli/src/: consume.rs  main.rs  produce.rs  schema.rs
danube-cli/tests/: basic_workflow.rs  schema_workflow.rs
danube-client/: Cargo.toml  README.md
danube-client/examples/: README.md  avro_consumer.rs  avro_producer.rs  json_consumer.rs  json_consumer_validated.rs  json_producer.rs  key_shared_consumer.rs  key_shared_filtered_consumer.rs  key_shared_producer.rs  partitions_consumer.rs  partitions_producer.rs  reliable_dispatch_consumer.rs  reliable_dispatch_producer.rs  schema_evolution.rs  simple_producer_consumer.rs
danube-client/src/: auth_service.rs  client.rs  connection_manager.rs  consumer.rs  dispatch_strategy.rs  errors.rs  health_check.rs  lib.rs  lookup_service.rs  message.rs  message_router.rs  producer.rs  reconnect_manager.rs  reliable_options.rs  retry_manager.rs  schema.rs  schema_registry_client.rs  schema_service.rs  schema_types.rs  topic_consumer.rs  topic_producer.rs
danube-client/tests/: consumer_reconnect.rs  enhanced_reconnect_test.rs  local_reconnect_test.rs  producer_reconnect.rs
danube-core/: Cargo.toml  README.md  build.rs
danube-core/proto/: DanubeAdmin.proto  DanubeApi.proto  DanubeManagedStorage.proto  EdgeReplicator.proto  SchemaRegistry.proto  raft_transport.proto
danube-core/src/: dispatch_strategy.rs  jwt.rs  lib.rs  message.rs  storage.rs
danube-edge/: Cargo.toml  build.rs
danube-edge/proto/: EdgeReplicator.proto
danube-edge/src/: config.rs  config_test.rs  edge_service.rs  lib.rs  readiness.rs  readiness_test.rs
danube-edge/tests/: edge_replication_basic.rs  edge_replication_security.rs  test_utils.rs
danube-iceberg/: Cargo.toml  README.md  config-example.yaml
danube-iceberg-storage/: Cargo.toml  README.md
danube-iceberg-storage/src/: catalog.rs  config.rs  errors.rs  iceberg_storage.rs  iceberg_storage_test.rs  lib.rs  topic_reader.rs  topic_writer.rs  wal.rs  warehouse.rs
danube-iceberg/src/: catalog.rs  checkpoint.rs  config.rs  iceberg_schema.rs  main.rs  schema.rs  schema_resolver.rs  schema_resolver_tests.rs  schema_tests.rs  segment_reader.rs  storage.rs  table_manager.rs  worker.rs  writer.rs
danube-iceberg/tests/: checkpoint.rs  common.rs  config_loading.rs  end_to_end.rs  iceberg_commit.rs  iceberg_schema.rs  iceberg_writer.rs  parquet_write.rs  schema_inference.rs  segment_decode.rs
danube-load-manager/: Cargo.toml  README.md
danube-load-manager/src/: lib.rs  load_report.rs  manager.rs  rankings.rs
danube-metadata-store/: Cargo.toml  README.md
danube-metadata-store/src/: lib.rs  providers.rs  watch.rs
danube-persistent-storage/: Cargo.toml  README.md
danube-persistent-storage/src/: buffered_storage.rs  checkpoint.rs  checkpoints_test.rs  cloud.rs  cloud_reader.rs  cloud_reader_test.rs  cloud_store.rs  cloud_store_test.rs  connection.rs  durable_history_reader.rs  durable_history_reader_test.rs  (+22 more)
danube-raft/: Cargo.toml  README.md
danube-reliable-dispatch/: Cargo.toml  README.md
danube-schema/: Cargo.toml
(+471 files in other folders)
