[workspace.lints.rust]
unsafe_code = "forbid"
#unused = "allow"

[workspace]
resolver = "2"
members = [
    # -- Danube messaging core services
    "danube-broker",

    # -- Danube messaging core types and traits
    "danube-core", 

    # -- Danube Metadata Store lib
    "danube-metadata-store", 

    # -- Danube lib client
    "danube-client",

    # -- Danube admin cli
    "danube-admin-cli", 
    
    # -- Danube client cli
    "danube-cli", 

    # -- Danube persistent storage
    "danube-persistent-storage",
]

[workspace.dependencies]
async-trait = "0.1.83"
clap = {version = "4.5.22", features =["derive"]}
dashmap = "5.5.3"
futures = "0.3.31"
prost = "0.13.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"
tonic = { version = "0.12.3" , features = ["tls"] }
tonic-types = "0.12.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
thiserror = "1.0.69"
base64 = "0.22.1"
rand = "0.8.5"
tokio-util = "0.7"
futures-util = "0.3.31"
metrics = "0.23.0"
anyhow = "1.0.95"
rustls = "0.23.21"
tempfile = "3.10"