[workspace.lints.rust]
unsafe_code = "forbid"
#unused = "allow"

[workspace]
resolver = "2"
members = [
    # -- Danube messaging core services
    "danube-broker",

    # -- Danube messaging core types and traits
    "danube-core", 

    # -- Danube Raft consensus layer (replaces ETCD)
    "danube-raft",

    # -- Danube persistent storage
    "danube-persistent-storage",

    # -- Danube schema registry (validation, compatibility, metadata)
    "danube-schema",

    # -- Danube edge broker (replication, MQTT, coordination)
    "danube-edge",

    # -- Danube lib client
    "danube-client",

    # -- Danube client cli 
    "danube-cli", 

    # -- Danube admin (consolidated CLI + Server)
    "danube-admin",
]

[workspace.dependencies]
futures = "0.3.32"
futures-util = "0.3.32"
tokio = { version = "1.52", features = ["full"] }
tokio-stream = "0.1.18"
tokio-util = "0.7"
async-trait = "0.1.89"
tonic = { version = "0.14" , features = ["tls-ring"] }
tonic-types = "0.14"
tonic-prost = "0.14"
prost = "0.14"
bytes = { version = "1.11", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = {version = "4.5", features =["derive"]}
dashmap = "6.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
jsonschema = "0.46"
jsonwebtoken = "10.4"
base64 = "0.22"
rand = "0.9"
metrics = "0.24"
anyhow = "1.0"
rustls = "0.23"
tempfile = "3.27"
assert_cmd = "2.2"
predicates = "3.1"

[profile.release]
lto = "thin"        # Cross-crate link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip debug symbols 
