[package]
name = "danube-admin-cli"
version = "0.1.9"
edition = "2021"

[dependencies]
danube-core = {path = "../danube-core"}
clap = { workspace = true }
tonic = { workspace = true }
tonic-types = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
prettytable-rs = "0.10.0"

[lints]
workspace = true
