[package]
name = "danube-admin-cli"
version = "0.4.0"
edition = "2021"

[dependencies]
danube-core = {path = "../danube-core"}
clap = { workspace = true }
tonic = { workspace = true }
tonic-types = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
prettytable-rs = "0.10.0"
base64 = "0.22"

[lints]
workspace = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
rand = "0.8"
