[package]
name = "danube-admin"
version = "0.7.0"
edition = "2021"
authors = ["Danube Team"]
description = "Unified CLI and HTTP server for managing Danube clusters"
license = "Apache-2.0"
repository = "https://github.com/danube-messaging/danube"

[[bin]]
name = "danube-admin"
path = "src/main.rs"

[dependencies]
danube-core = { path = "../danube-core" }

# Shared dependencies
tokio = { workspace = true }
tonic = { workspace = true }
tonic-types = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
rustls = { workspace = true }
base64 = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["gzip", "json", "rustls-tls"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# CLI dependencies
clap = { workspace = true, features = ["derive", "env"] }

# Server dependencies
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# MCP support
rmcp = { version = "0.14", features = ["server", "macros", "transport-io"] }
schemars = { version = "1.0" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = { workspace = true }
rand = { workspace = true }

[lints]
workspace = true
