[package]
name = "danube-broker"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
danube-core = {path = "../danube-core"}
danube-client = {path = "../danube-client"}
danube-metadata-store = {path = "../danube-metadata-store"}
danube-persistent-storage = {path = "../danube-persistent-storage"}
dashmap = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tonic-types = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
metrics = { workspace = true }
rustls = { workspace = true }
metrics-exporter-prometheus = "0.15.3"
serde_yaml = "0.9.34"
jsonwebtoken = "9.3.1"
flume = "0.11.1"
num_cpus = "1.17.0"

[build-dependencies]

[lints]
workspace = true

[dev-dependencies]
futures-util = "0.3.31"
once_cell = "1.21.3"
