[package]
name = "danube-broker"
version = "0.7.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
danube-core = {path = "../danube-core"}
danube-client = {path = "../danube-client"}
danube-metadata-store = {path = "../danube-metadata-store"}
danube-persistent-storage = {path = "../danube-persistent-storage"}

async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tonic-types = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
metrics = { workspace = true }
rustls = { workspace = true }
metrics-exporter-prometheus = "0.17"
serde_yaml = "0.9.34"
jsonwebtoken = "9.3.1"
flume = "0.11.1"
num_cpus = "1.17.0"
sysinfo = "0.37.2"

# Schema registry dependencies
apache-avro = "0.21"
jsonschema = { workspace = true }
sha2 = "0.10"
hex = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.18"

[build-dependencies]

[lints]
workspace = true

[dev-dependencies]
assert_cmd = "2.0"
futures-util = "0.3.31"
once_cell = "1.21.3"
