[package]
name = "danube-broker"
version = "0.14.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
danube-core = {path = "../danube-core"}
danube-client = {path = "../danube-client"}
danube-persistent-storage = {path = "../danube-persistent-storage"}
danube-raft = {path = "../danube-raft"}
danube-schema = {path = "../danube-schema"}
danube-edge = {path = "../danube-edge"}

async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tonic-types = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
metrics = { workspace = true }
rustls = { workspace = true }
jsonwebtoken = { workspace = true }
metrics-exporter-prometheus = "0.17"
serde_yaml = "0.9.34"
flume = "0.11.1"
num_cpus = "1.17"
sysinfo = "0.38"

# Schema registry (types, validation, compatibility) provided by danube-schema

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.18"

[build-dependencies]

[lints]
workspace = true

[dev-dependencies]
assert_cmd = { workspace = true }
futures-util = { workspace = true }
once_cell = "1.21"
