[package]
name = "danube-cli"
version = "0.5.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
futures-util = "0.3.31"
jsonschema = "0.28.3"

danube-client = {path = "../danube-client"}
danube-core = {path = "../danube-core"}

[lints]
workspace = true
