[package]
name = "danube-cli"
version = "0.7.3"
edition = "2021"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
futures-util = "0.3.31"
jsonschema = { workspace = true }

danube-client = {path = "../danube-client"}
danube-core = {path = "../danube-core"}

[lints]
workspace = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
rand = { workspace = true }
