[package]
name = "danube-cli"
version = "0.15.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
jsonschema = { workspace = true }

danube-client = {path = "../danube-client"}
danube-core = {path = "../danube-core"}

[lints]
workspace = true

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
rand = { workspace = true }
