[package]
name = "danube-client"
version = "0.5.1"
description = "The async client for Danube Messaging Broker platform"
keywords = ["danube", "pub-sub", "messaging_system", "message_broker", "event_streaming"]
authors = ["Dan Rusei <dan.rusei@gmail.com>"]
repository = "https://github.com/danube-messaging/danube"
documentation = "https://docs.rs/danube-client"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
danube-core = {path = "../danube-core", version = "0.5.1"}

prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tonic-types = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
rustls = { version = "0.23.34", default-features = false, features = ["ring"] }
