[package]
name = "danube-core"
version = "0.5.0" # update the danube-client version too
description = "Danube messaging core types and traits"
authors = ["Dan Rusei <dan.rusei@gmail.com>"]
repository = "https://github.com/danube-messaging/danube"
documentation = "https://docs.rs/danube-core"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
thiserror = {workspace = true }
tokio = { workspace = true, features = ["sync"] }
futures-core = "0.3"

[build-dependencies]
tonic-prost-build = "0.14.2"

[lints]
workspace = true
