[package]
name = "danube-core"
version = "0.8.0" # update the danube-client version too
description = "Danube messaging core types and traits"
authors = ["Dan Rusei <dan.rusei@gmail.com>"]
repository = "https://github.com/danube-messaging/danube"
documentation = "https://docs.rs/danube-core"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
futures-core = "0.3"
tokio = { workspace = true, features = ["sync"] }
tokio-stream = { workspace = true, features = ["sync"] }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
thiserror = {workspace = true }

[build-dependencies]
tonic-prost-build = "0.14.2"

[lints]
workspace = true
