[package]
name = "danube-edge"
version = "0.12.0"
description = "Edge broker services for Danube messaging (replication, MQTT, coordination)"
authors = ["Dan Rusei <dan.rusei@gmail.com>"]
repository = "https://github.com/danube-messaging/danube"
license = "Apache-2.0"
edition = "2021"

[dependencies]
danube-core = { path = "../danube-core" }
danube-client = { path = "../danube-client" }
danube-persistent-storage = { path = "../danube-persistent-storage" }
danube-schema = { path = "../danube-schema" }
mqtt-frame = "0.1"

async-trait = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { version = "0.7", features = ["codec"] }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
tracing = { workspace = true }
anyhow = { workspace = true }
metrics = { workspace = true }
futures = { workspace = true }

[lints]
workspace = true
