[package]
name = "danube-metadata-store"
version = "0.1.4"
description = "The danube-metadata-store crate is responsible for storing and retrieving Metadata for Danube messaging broker"
authors = ["Dan Rusei <dan.rusei@gmail.com>"]
repository = "https://github.com/danube-messaging/danube"
documentation = "https://docs.rs/danube-metadata-store"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"

[dependencies]
etcd-client = "0.14.0"
tracing = { workspace = true }
futures = "0.3.31"
tokio = { workspace = true }
thiserror = "2.0.9"
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1.83"
dashmap = "5.5.3"

[lints]
workspace = true
