[package]
name = "danube-persistent-storage"
version = "0.5.0"
description = "Message storage backend extensions for Danube messaging"
authors = ["Dan Rusei <dan.rusei@gmail.com>"]
repository = "https://github.com/danube-messaging/danube-storage"
documentation = "https://docs.rs/danube-storage-disk"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"

[dependencies]
danube-core = { path = "../danube-core" }
danube-metadata-store = { path = "../danube-metadata-store" }

async-trait = {workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
futures = { workspace = true}
tonic = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
bincode = "1.3.3"
bytes = "1.10.0"
chrono = { version = "0.4", features = ["clock"] }
crc32fast = "1.4"
opendal = { version = "0.54", features = ["services-azblob", "services-s3", "services-gcs", "services-fs", "services-memory", "layers-tracing"] }
async-stream = "0.3"

[dev-dependencies]
tempfile = "3.8"
futures = { workspace = true }

[lints]
workspace = true
