[package]
name = "danube-persistent-storage"
version = "0.7.0"
description = "Persistent cloud storage extensions for Danube messaging"
authors = ["Dan Rusei <dan.rusei@gmail.com>"]
repository = "https://github.com/danube-messaging/danube"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"

[dependencies]
danube-core = { path = "../danube-core" }
danube-metadata-store = { path = "../danube-metadata-store" }

async-trait = {workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
tonic = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
metrics = { workspace = true }
bincode = { version = "2.0.1", features = ["serde"] }
bytes = "1.10.1"
chrono = { version = "0.4", features = ["clock"] }
crc32fast = "1.4"
opendal = { version = "0.54", features = ["services-azblob", "services-s3", "services-gcs", "services-fs", "services-memory", "layers-tracing"] }
async-stream = "0.3"


[dev-dependencies]
tempfile = { workspace = true }
futures = { workspace = true }

[lints]
workspace = true
