[package]
name = "danube-raft"
version = "0.7.3"
description = "Embedded Raft consensus layer for Danube messaging broker (replaces ETCD)"
authors = ["Dan Rusei <dan.rusei@gmail.com>"]
repository = "https://github.com/danube-messaging/danube"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"

[dependencies]
openraft = { version = "0.9", features = ["serde", "storage-v2"] }
redb = "2"
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = "1"
tonic = { workspace = true }
prost = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }

danube-core = { path = "../danube-core" }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
futures = { workspace = true }

[lints]
workspace = true
