[package]
name = "danube-reliable-dispatch"
version = "0.1.6"
description = "The danube-reliable-dispatch crate is responsible for ensuring reliable message delivery in Danube messaging broker"
authors = ["Dan Rusei <dan.rusei@gmail.com>"]
repository = "https://github.com/danube-messaging/danube"
documentation = "https://docs.rs/danube-reliable-dispatch"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"

[dependencies]
danube-client = {path = "../danube-client"}
dashmap = "5.5.3"
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = "1.0.59"
async-trait = "0.1.83"
bincode = "1.3.3"
aws-config = "1.5.11"
aws-sdk-s3 = "1.66.0"
bytes = "1.9.0"
aws-smithy-runtime-api = "1.0"

[dev-dependencies]
tempfile = "3.8"

[lints]
workspace = true
