[package]
name = "danube-reliable-dispatch"
version = "0.2.3"
description = "The danube-reliable-dispatch crate is responsible for ensuring reliable message delivery in Danube messaging broker"
authors = ["Dan Rusei <dan.rusei@gmail.com>"]
repository = "https://github.com/danube-messaging/danube"
documentation = "https://docs.rs/danube-reliable-dispatch"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"

[dependencies]
danube-core = {path = "../danube-core"}
danube-storage-disk = {path = "../storage/danube-storage-disk"}
danube-storage-s3 = {path = "../storage/danube-storage-s3"}

async-trait = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }


[dev-dependencies]
tempfile = "3.8"

[lints]
workspace = true
