[package]
name = "danube-reliable-dispatch"
version = "0.2.4"
description = "The danube-reliable-dispatch crate is responsible for ensuring reliable message delivery in Danube messaging broker"
authors = ["Dan Rusei <dan.rusei@gmail.com>"]
repository = "https://github.com/danube-messaging/danube"
documentation = "https://docs.rs/danube-reliable-dispatch"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"

[dependencies]
danube-core = {path = "../danube-core"}
danube-persistent-storage = {path = "../danube-persistent-storage"}

async-trait = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
moka = {version = "0.12.10" , features = ["future"]}


[dev-dependencies]
tempfile = "3.8"

[lints]
workspace = true
