[package]
name = "danube-schema"
version = "0.15.0"
description = "Schema registry, validation, and compatibility for Danube messaging"
authors = ["Dan Rusei <dan.rusei@gmail.com>"]
repository = "https://github.com/danube-messaging/danube"
license = "Apache-2.0"
edition = "2021"

[dependencies]
danube-core = { path = "../danube-core" }

async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
metrics = { workspace = true }

# Schema format dependencies
apache-avro = "0.21"
jsonschema = { workspace = true }
sha2 = "0.10"
hex = "0.4"

[lints]
workspace = true
